deployments/glm52-tp8-0718/configs/pd-manifests/pd-prefill-144.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pd-prefill-144
  namespace: kube-system
  labels:
    app: pd-prefill
spec:
  hostNetwork: true
  hostPID: false
  nodeName: node-21.151.225.144
  containers:
  - name: router
    image: mirrors.tencent.com/ti-platform/sglang-glm52-308x-pd:http-0714v2
    imagePullPolicy: Always
    command: ["/bin/bash", "-c"]
    args:
    - |
      [...]
    resources:
      limits:
        amd.com/gpu: "8"
      requests:
        amd.com/gpu: "8"
        cpu: "360"
        memory: "2100Gi"
    volumeMounts:
    - name: shm
      mountPath: /dev/shm
    - name: dev-infiniband
      mountPath: /dev/infiniband
    - name: dev-kfd
      mountPath: /dev/kfd
    - name: dev-dri
      mountPath: /dev/dri
    - name: data
      mountPath: /data
  volumes:
  - name: shm
    emptyDir:
      medium: Memory
      sizeLimit: 64Gi
  - name: dev-infiniband
    hostPath:
      path: /dev/infiniband
      type: Directory
  - name: dev-kfd
    hostPath:
      path: /dev/kfd
      type: CharDevice
  - name: dev-dri
    hostPath:
      path: /dev/dri
      type: Directory
  - name: data
    hostPath:
      path: /data
      type: Directory
  tolerations:
  - operator: Exists
